--- a/06_0_Übung/06_0_stylesheet.css
+++ b/06_0_Übung/06_0_stylesheet.css
@@ -1,64 +1,57 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
 .container1{
     background-color: yellow;
     height: 100px;
     display: flex;
     flex-direction: row-reverse;
-    align-items: ;
 }
 
 .box1{
+    position: relative;
     height: 30px;
     width: 30px;
-    background-color: blue;
-    border-style: solid;
+    background-color: rgb(157, 157, 183);
     margin: 5px;
+    top: 45px;
+    right: 35px;
+    border-style: solid;
+    border-width: 2px;
+}
+
+.container2{
+    position: relative;
+    border-style: solid;
+    border-width: 2px;
+    width: 400px;
+    height: 300px;
+    margin: 20px;
+}
+
+.box2{
+    position: absolute;
+    background-color: aqua;
+    height: 100px;
+    width: 100px;
+    bottom: 0px;
+    right: 0px;
+}
+
+.header{
+    position: relative;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
+.list{
+    position: relative;
+    margin-left: 20px;
+    margin-top: 5px
+}
+
+.box3{
+    position: absolute;
+    background-color: blue;
+    width: 50px;
+    height: 50px;
+    bottom: 0px;
+    right: 0px;
 }
