--- a/06_2_Übung/06_2_stylesheet.css
+++ b/06_2_Übung/06_2_stylesheet.css
@@ -33,3 +33,26 @@
     justify-content: center;
     align-items: center;
 }
+
+.container2{
+    border-style: solid;
+    border-width: 2px;
+    position:relative;
+   
+    height:80px;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.box3{
+    background-color: greenyellow;
+    width: 40px;
+    height: 20px;
+    margin: 10px;
+}
+
+.con02{
+    position: relative;
+    padding: 30px;
+}
