06_3_Übung_done-correction

--- a/06_3_Übung/06_3_stylesheet.css
+++ b/06_3_Übung/06_3_stylesheet.css
@@ -1,4 +1,4 @@
-.container1{
+.container1 {
     display: flex;
     position: relative;
     width: 400px;
@@ -7,7 +7,7 @@
     margin-left: 50px;
 }
 
-.box1{
+.box1 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@
     border-width: 2px;
 }
 
-.box2{
+.box2 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,7 +33,7 @@
     border-width: 2px;
 }
 
-.box3{
+.box3 {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -46,7 +46,7 @@
     margin-top: 1px;
 }
 
-.container2{
+.container2 {
     position: relative;
     display: flex;
     justify-content: center;
@@ -57,7 +57,7 @@
     height: 250px;
 }
 
-.box4{
+.box4 {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -65,4 +65,15 @@
     background-color: orange;
     width: 150px;
     height: 150px;
+}
+
+.box5 {
+    display: flex;
+    position: absolute;
+    background-color: aqua;
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    right: 0px;
 }
