--- a/06_4_Übung/06_4_stylesheet.css
+++ b/06_4_Übung/06_4_stylesheet.css
@@ -78,11 +78,19 @@
 }
 
 .xy{
-    border: 1px solid black;
     position: relative;
     height: 300px;
     width: 300px;
     background-color: greenyellow;
+}
+
+.box6{
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    background-color: blueviolet;
+    bottom: 0px;
+    right: 0px;
 }
 
 
